<resources>
    <string name="app_name">EasyEnglish</string>
    <string name="dictionary">Dictionary</string>
    <string name="enter_word">Enter word</string>
    <string name="translate">translate</string>
    <string name="error">error</string>
    <string name="ERROR">ERROR</string>
    <string name="local_games">Local Games</string>
    <string name="matching">Matching</string>
    <string name="letter_puzzle">Letter puzzle</string>
    <string name="word_puzzle">Word puzzle</string>
    <string name="definitions">Definitions</string>
    <string name="synonyms">Synonyms</string>
    <string name="games">Games</string>
    <string name="_10_words">10 words</string>
    <string name="word_chain">Word chain</string>
    <string name="statistics">Statistics</string>
    <string name="menu">Menu</string>
    <string name="next">Next word</string>
    <string name="finish">Finish</string>
    <string name="check_answer">Check answer</string>
    <string name="swap"><![CDATA[<->]]></string>
    <string name="word_list">Word list</string>
    <string name="choose_definition">Choose definition</string>
    <string name="end_letter_puzzle_game">End Game</string>
    <string name="rules">Rules</string>
    <string name="hints">Hints</string>
    <string name="en">EN</string>
    <string name="ru">RU</string>
    <string name="edit_lists">Edit Lists</string>
    <string name="add_new_list">add new list</string>
    <string name="learn_words">Learn words</string>
    <string name="switch_to_cards_mode">Switch to cards mode</string>
    <string name="right_answer">RIGHT!</string>
    <string name="wrong_answer">WRONG!</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="save">Save</string>
    <string name="add_word">Add word</string>
    <string name="Russian">Russian</string>
    <string name="English">English</string>
    <string name="edit">edit</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="reset">Reset</string>
    <string name="opponent_answer">Opponent answer:</string>
    <string name="your_answer">Your answer:</string>
    <string name="send_answer">send answer</string>
    <string name="start_game">start game</string>


    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
    <string name="quick_game">Quick game</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="wrong_answers">-</string>
    <string name="right_answers">+</string>
    <string name="word">word</string>
    <string name="end_game">End game</string>
    <string name="choose_theme">Choose theme</string>

</resources>
