<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalGamesMenuActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        style="@style/EasyEnglish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/local_games"
        style="@style/GameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/matching_button"
        android:text="@string/matching"
        style="@style/MainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/letter_puzzle_button"
        style="@style/MainButton"
        android:text="@string/letter_puzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matching_button" />

    <Button
        android:id="@+id/word_puzzle_button"
        style="@style/MainButton"
        android:text="@string/word_puzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letter_puzzle_button" />

    <Button
        android:id="@+id/definitions_button"
        android:text="@string/definitions"
        style="@style/MainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_puzzle_button" />

    <Button
        android:id="@+id/synonyms_button"
        android:text="@string/synonyms"
        style="@style/MainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definitions_button" />

</android.support.constraint.ConstraintLayout>