<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.WordChainActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        style="@style/EasyEnglish"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/word_chain"
        style="@style/GameTitle"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        style="@style/MainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <Button
            android:id="@+id/start_game_button"
            android:text="@string/start_game"
            style="@style/MainButton" />

        <Button
            android:id="@+id/check_games_button"
            android:text="@string/check_games"
            style="@style/MainButton" />

        <Button
            android:id="@+id/sign_out_button"
            android:text="@string/sign_out"
            style="@style/MainButton" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>