<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.games.WordPuzzleActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/EasyEnglish"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/GameTitle"
        android:text="@string/word_puzzle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        style="@style/MainLinearLayout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/russian_phrase_text"
            style="@style/ElementInBorder"
            android:layout_marginTop="10dp"
            android:layout_weight="0.05"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <ru.hse.android.project.easyenglish.ui.views.DragAndDropListView
            android:id="@+id/drag_and_drop_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.89" />

        <Button
            android:id="@+id/send_answer_button"
            style="@style/GroupedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/check_answer" />

        <LinearLayout
            style="@style/InnerLinearLayout"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rules_button"
                style="@style/GroupedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules" />

            <Button
                android:id="@+id/end_game_button"
                style="@style/GroupedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_game"/>

            <Button
                android:id="@+id/hints_button"
                style="@style/GroupedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hints" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>