<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SynonymsActivity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/app_name"
        style="@style/EasyEnglish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/synonyms"
        style="@style/GameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        style="@style/MainLinearLayout"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/word_task_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal" />

        <LinearLayout
            android:id="@+id/check_boxes_layout"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.69"
            android:textSize="24sp"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/check_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/check_answer" />


        <LinearLayout
            style="@style/MainLinearLayout"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="0.2"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/end_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_game"/>

            <Button
                android:id="@+id/rules_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rules" />

            <Button
                android:id="@+id/hints_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hints" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>