<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ElementInBorder"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/russian_word_column"
            android:layout_width="25dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Russian"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/english_word_column"
            android:layout_width="25dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/English"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/right_score_column"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/right_answers"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wrong_score_column"
            android:layout_width="18dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/wrong_answers"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/option_menu"
            android:layout_width="27dp"
            android:layout_height="50dp"
            android:gravity="top"
            android:text="@string/menu_option"
            android:textAlignment="center" />
    </LinearLayout>
</LinearLayout>