<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView"
        android:layout_width="395dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="10sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="42sp"
        android:textStyle="bold|italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="176dp"
        android:layout_height="41dp"
        android:layout_marginTop="19dp"
        android:text="@string/games"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_10words"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/_10_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button_local_games"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/local_games"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_10words" />

    <Button
        android:id="@+id/button_word_chain"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/word_chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_local_games" />

</android.support.constraint.ConstraintLayout>